# mcp-test

./: CLIENT_README.md  client.py  llm_client.py  llm_web.py  main.py  math_test.py  maths.py  mcp_client.py  pyproject.toml  server.py  simple_client.py  test.py  test_mcp.py  web_client.py
dto/: energy_consumption_cost_dto.py
middleware/: bearer_token_interceptor.py
resource/: endpoints.py
server/: test_server.py
templates/: chat.html
tools/: csv_tools.py  parquet_tools.py
